--- a/Sunday_16_10/task3.html
+++ b/Sunday_16_10/task3.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Task3</title>
 </head>
 <body>
-    <a href="Sunday_16_10/task1.html">task1</a>
-    <a href="Sunday_16_10/task2.html">task2</a>
-    <a href="Sunday_16_10/task3.html">task3</a>
+    <p>Click here to go Orange or Google</p>
+    <a href="https://www.orange.jo/ar/pages/default.aspx">Orange</a>
+    <span>and</span>
+    <a href="https://www.google.com/">Google</a>
 </body>
 </html>
