--- a/Sunday_16_10/task2.html
+++ b/Sunday_16_10/task2.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Task2</title>
 </head>
 <body>
-    <a href="Sunday_16_10/task1.html">task1</a>
-    <a href="Sunday_16_10/task2.html">task2</a>
-    <a href="Sunday_16_10/task3.html">task3</a>
+    <H1>The First Heading</H1>
+    <hr>
+    <p>Hi. I am paragraph. Am I ?</p>
 </body>
 </html>
