--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <a href="Sunday_16_10/task1.html">task1</a>
     <a href="Sunday_16_10/task2.html">task2</a>
     <a href="Sunday_16_10/task3.html">task3</a>
+    <a href="Sunday_16_10/task4.html">task4</a>
+
 </body>
 </html>
