HTML & CSS Tasks

--- a/Sunday_16_10/task2.html
+++ b/Sunday_16_10/task2.html
@@ -10,5 +10,18 @@
     <H1>The First Heading</H1>
     <hr>
     <p>Hi. I am paragraph. Am I ?</p>
+
+    <form>
+        <div>
+            <input type="radio" id="huey" name="drone" value="huey"
+                   checked>
+            <label for="huey">Huey</label>
+        </div>
+      
+        <div>
+            <input type="radio" id="dewey" name="drone" value="dewey">
+            <label for="dewey">Dewey</label>
+        </div>
+    </form>
 </body>
 </html>
