--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </tr>
 
             <tr>
-                <td class="days">Tuseday</td>
+                <td class="days" rowspan="2">Tuseday</td>
 
                 <td class="link"><a href="Tuseday_18_10/task10.html">task10</a></td>
                 <td><img src="https://media.discordapp.net/attachments/1028590342070607903/1031888106036670485/task3.PNG" alt="Task10" width="100px" height="100px"></td>
@@ -122,6 +122,20 @@
                 <td><img src="https://media.discordapp.net/attachments/1028590342070607903/1031918934498218095/task5.PNG" alt="Task14" width="100px" height="100px"></td>
 
             </tr>
+
+            <tr>
+
+                <td class="link"><a href="Tuseday_18_10/exercise1.html">exercise1</a></td>
+                <td><img src="https://cdn.discordapp.com/attachments/1028590342070607903/1031983640554520598/ex2.PNG" alt="Exercise1" width="100px" height="100px"></td>
+
+                <td class="link"><a href="Tuseday_18_10exercise2.html">exercise2</a></td>
+                <td><img src="https://cdn.discordapp.com/attachments/1028590342070607903/1031983640881659995/extra1.PNG" alt="Exercise2" width="100px" height="100px"></td>
+
+                <td class="link"><a href="Tuseday_18_10/exercise3.html">exercise3</a></td>
+                <td><img src="https://media.discordapp.net/attachments/1028590342070607903/1031983641242390548/extra2.PNG" alt="Exercise3" width="100px" height="100px"></td>
+
+            </tr>
+
         </table>
     </div>
 </body>
