--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <td class="link"><a href="Tuseday_18_10/exercise1.html">exercise1</a></td>
                 <td><img src="https://cdn.discordapp.com/attachments/1028590342070607903/1031983640554520598/ex2.PNG" alt="Exercise1" width="100px" height="100px"></td>
 
-                <td class="link"><a href="Tuseday_18_10exercise2.html">exercise2</a></td>
+                <td class="link"><a href="Tuseday_18_10/exercise2.html">exercise2</a></td>
                 <td><img src="https://cdn.discordapp.com/attachments/1028590342070607903/1031983640881659995/extra1.PNG" alt="Exercise2" width="100px" height="100px"></td>
 
                 <td class="link"><a href="Tuseday_18_10/exercise3.html">exercise3</a></td>
