--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
             
                 <td class="link"><a href="Thursday_20_10/task17.html">task17</a></td>
                 <td><img src="https://media.discordapp.net/attachments/1028590342070607903/1032693382922907688/task3.3.PNG" alt="Task17" width="100px" height="100px"></td>
+
+                <td class="link"><a href="Thursday_20_10/Coach-Salameh-Task.html">Co.Sl.Ta</a></td>
+                <td><img src="image/Col&Row Spans.png" alt="Coach-Salameh-Task" width="100px" height="100px"></td>
         
             </tr>
 
