--- a/Thursday_20_10/Coach-Salameh-Task.html
+++ b/Thursday_20_10/Coach-Salameh-Task.html
@@ -8,7 +8,7 @@
 
     <style>
 
-        table,tr, th, td {
+        table,tr, td {
             border-width: 5px;
             border-color: rgb(229, 229, 229);
             font-size: 30px;
@@ -16,6 +16,7 @@
             text-align: center;
             border-collapse: collapse;
             border-style: groove;
+            font-weight: bold;
         }
 
         table {
@@ -28,19 +29,19 @@
 <body>
     <table>
         <tr>
-            <th rowspan="9">A</th>
-            <th rowspan="8">B</th>
-            <th rowspan="7">C</th>
-            <th rowspan="6">D</th>
-            <th rowspan="5">E</th>
-            <th rowspan="4">F</th>
-            <th colspan="2">AH</th>
-            <th rowspan="4">H</th>
-            <th rowspan="5">I</th>
-            <th rowspan="6">J</th>
-            <th rowspan="7">K</th>
-            <th rowspan="8">L</th>
-            <th rowspan="10">M</th>
+            <td rowspan="9">A</td>
+            <td rowspan="8">B</td>
+            <td rowspan="7">C</td>
+            <td rowspan="6">D</td>
+            <td rowspan="5">E</td>
+            <td rowspan="4">F</td>
+            <td colspan="2">AH</td>
+            <td rowspan="4">H</td>
+            <td rowspan="5">I</td>
+            <td rowspan="6">J</td>
+            <td rowspan="7">K</td>
+            <td rowspan="8">L</td>
+            <td rowspan="10">M</td>
         </tr>
 
         <tr>
