--- a/Thursday_20_10/task17.html
+++ b/Thursday_20_10/task17.html
@@ -47,21 +47,21 @@
     <h1>Have fun while styling</h1>
     <hr>
 
-    <p id="blue-line">Here is a text <span class="two-Links">with link</span>. Let's do it !</p>
-    <p>We have more <span class="two-Links">links</span> here ;</p>
-    <p>Is this a (<span id="special">link</span> ?).</p>
+    <p id="blue-line">Here is a text <a href="#"  class="two-Links">with link</a>. Let's do it !</p>
+    <p>We have more <a href="#" class="two-Links">links</a> here ;</p>
+    <p>Is this a (<a href="#" id="special">link</a> ?).</p>
     <p>We have a list</p>
     <ul>
-        <li id="bold">Please,<span class="a">Click me!</span></li>
+        <li id="bold">Please,<a href="#" class="a">Click me!</a></li>
         <li>Can you ? let's count</li>
         <ul id="list-color">
             <li style="font-weight: bold;">111</li>
-            <li>222 <span class="a">Another Link</span></li>
+            <li>222 <a href="#" class="a">Another Link</a></li>
             <li>333</li>
             <ul style="list-style-type : none">
                 <li style="font-weight: bold;">red</li>
                 <li>green</li>
-                <li>blue <span class="a">Colors Link</span></li>
+                <li>blue <a href="#" class="a">Colors Link</a></li>
             </ul>
         </ul>
         <li>That's enough !</li>
