--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
                 
                 <td class="link"><a href="Monday_24_10/task21.html">task21</a></td>
                 <td><img src="https://media.discordapp.net/attachments/1028590342070607903/1034075332027875338/task4.3.PNG" alt="Task21" width="100px" height="100px"></td>
+
+                <td class="link"><a href="Monday_24_10/Web-Task.html">WEBSITE Task</a></td>
+                <td><img src="image/web-task.png" alt="Web-task" width="100px" height="100px"></td>
                 
             </tr>
 
