--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
                 <td class="link"><a href="Tuseday_25_10/task25.html">task25</a></td>
                 <td><img src="https://media.discordapp.net/attachments/1028590342070607903/1034448555651383396/task5.5.PNG?width=1233&height=663" alt="Task25" width="100px" height="100px"></td>
             
-                <td colspan="2" style="background-color: rgb(121, 87, 255) ; font-size: 12px; color: yellow; text-align: center;"><div class="rotate">Just That for This Day</div></td>
+                <td class="link"><a href="Tuseday_25_10/task26.html">task26</a></td>
+                <td><img src="image/Media.png" alt="Task26" width="100px" height="100px"></td>
 
             </tr>
 
