--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
             
                 <td class="link"><a href="Wednesday_26_10/BootStrap.html">BootStrap</a></td>
                 <td><img src="image/BootStrap-Task.png" alt="BootStrap" width="100px" height="100px"></td>
+
+                <td colspan="4" style="background-color: rgb(121, 87, 255) ; font-size: 12px; color: yellow; text-align: center;"><div class="rotate">Just That for This Day</div></td>
     
             </tr>
 
